[gd_scene load_steps=2 format=3 uid="uid://cp37yhmirh3mv"]

[ext_resource type="Script" uid="uid://dyub32t05cl5q" path="res://Scenes/Menus/PlayMenu.gd" id="1_e32mn"]

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e32mn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -50.5
offset_right = 80.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="File1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1. Create New Save "

[node name="File2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "2. Create New Save "

[node name="File3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "3. Create New Save "

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "< Back"

[connection signal="pressed" from="VBoxContainer/File1" to="." method="_on_file_1_pressed"]
[connection signal="pressed" from="VBoxContainer/File2" to="." method="_on_file_2_pressed"]
[connection signal="pressed" from="VBoxContainer/File3" to="." method="_on_file_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
